<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dip"
    android:focusableInTouchMode="false" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/scan_info_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/scanner_info_text"
            android:textSize="20sp" />

        <Button
            android:id="@+id/scan"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/scan_info_text"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/button_selector"
            android:gravity="center"
            android:paddingLeft="30dip"
            android:paddingRight="30dip"
            android:text="@string/scan_button_text" />

        <TextView
            android:id="@+id/scanned_data_header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/scan"
            android:layout_marginTop="20dip"
            android:background="@drawable/bottom_border"
            android:text="@string/scanned_data_header"
            android:textStyle="bold" />

        <TableLayout
            android:id="@+id/scanned_data_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/scanned_data_header"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dip"
            android:weightSum="5" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/card_number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/separator" />

                <TextView
                    android:id="@+id/card_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="left" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/expiry_date" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/separator" />

                <TextView
                    android:id="@+id/expirydate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="left" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/reset"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/scanned_data_container"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/button_selector"
            android:gravity="center"
            android:paddingLeft="30dip"
            android:paddingRight="30dip"
            android:text="@string/reset_button_text" />
    </RelativeLayout>

</ScrollView>